# tarpc-wasm-client-tcp-server-example

./: Cargo.toml  README.md
client/: Cargo.toml  readme.md
client/src/: app.rs  lib.rs  loggin.rs  rpc_client.rs
rpc/: Cargo.toml
rpc/src/: services.rs
server/: Cargo.toml  tmp.txt
server/src/: lib.rs  loggin.rs  service_impl.rs  web.rs
