[package]
name = "rpc"
version = "0.1.0"
authors = ["John Hernandez <john.hern@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0"}
# tarpc = {path="../../tarpc/tarpc"}
tarpc = {git = "https://github.com/john-hern/tarpc", branch = "wasm_support", features=["tokio1", "wasm", "serde1"] }